[metadata]
name = enigma_simulator
version = 0.1.0
description = An implementation of the Enigma machine in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tristan-jl/enigma_simulator
author = Tristan Laurens
author_email = tristanlaurens@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.9.0

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = true

[coverage:run]
plugins = covdefaults

[flake8]
ignore = E203, E266, E402, E501, W503, F403, F401
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9

[mypy]
python_version = 3.9
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-tests.*]
disallow_untyped_defs = false
